--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
                       </span>
                   </a>
               </li>
+			  <li class="list-inline-item">
+                  <a href="https://www.thingiverse.com/onglez">
+                      <span class="fa-stack fa-lg">
+                          <i class="fa fa-circle fa-stack-2x"></i>
+                          <i class="fa fa-stack-1x fa-inverse" style="font-size:32px font-weight:900">T</i>
+                      </span>
+                  </a>
+              </li>
               <li class="list-inline-item">
                   <a href="https://andre-tm-hui.github.io/files/andre-hui-resume.pdf">
                       <span class="fa-stack fa-lg">
@@ -264,10 +272,10 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>
-              My interests are primarily in Virtual Reality and Video Game Development, with hopes to create highly replayable experiences. I am also interested in Artificial Intelligence, and how it can be applied in video games. Games I tend to gravitate towards are PVP and multiplayer games, but VR has caused my interest in simulator-style games to increase.
+              My interests are primarily in Virtual Reality and Video Game Development, with hopes to create highly replayable experiences. I am also interested in Artificial Intelligence and Human-Computer Interaction, and how they can be applied in Virtual Reality and video gamees. Games I tend to gravitate towards are PVP and multiplayer games, but VR has caused my interest in simulator-style games to increase.
           </p>
             <p>
-                Beyond software development, I enjoy being active through sports, such as Basketball and Boxing. I'm also a guitarist who enjoys taking a crack at learning any new Polyphia song. Finally, I'm a hobbyist maker and tinkerer who likes to design functional solutions to any minor problems that come up.
+                Beyond software development, I enjoy being active through sports, such as Basketball and Boxing. I'm also a guitarist who enjoys taking a crack at learning any new Polyphia song. Finally, I'm a hobbyist maker and tinkerer who likes to design and build things.
             </p>
         </div>
       </section>
@@ -341,6 +349,12 @@
                                 WIP: Analog kick and hi-hat pedal interactions, allowing control over their dynamics
                             </li>
                         </ul>
+
+                        <div style="text-align:center; padding-top: 20px">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/RPWr4kSICfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+
+                        <p style="padding-top: 20px">At the moment, the drum samples used are taken from the <a href="https://www.powerdrumkit.com">MTPowerDrumKit</a> VST plugin.</pstyle="text-align:center;>
 
                         <h3 style="padding-top: 40px">Future Additions:</h3>
                         <ul class="fa-ul mb-0">
