--- a/index.html
+++ b/index.html
@@ -314,6 +314,13 @@
                       An ongoing personal project, this is a software-based audio soundboard. This is a fun project to help me learn C++, this project incorporates the portaudio and libsndfile libraries to create a program that records and plays back audio samples in real-time.
                   </p>
               </li>
+              <li style="padding-bottom: 40px">
+                  <h3>3D Printed Quest 2 "Developers'" Headstrap</h3>
+                  <a href="https://www.thingiverse.com/thing:5407375" style="font-size:12px;">Thingiverse Link</a>
+                  <p>
+                      A maker project inspired by the inconvenience of having to take of my VR headset entirely, just to change 1 line of code.
+                  </p>
+              </li>
           </ul>
         </div>
       </section>
