--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Andre Hui - Online Portfolio</title>
+    <title>Resume - Start Bootstrap Theme</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -201,6 +201,14 @@
                       </div>
                   </li>
                   <li class="list-item progress-holder row align-items-center" style="padding:5px">
+                      <div class="progress-label col-sm-3 col-lg-2">JS</div>
+                      <div class="col-sm-8 col-lg-5">
+                          <div class="progress justify-content-end" style="width: 100%; float: right;">
+                              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div>
+                      </div>
+                  </li>
+                  <li class="list-item progress-holder row align-items-center" style="padding:5px">
                       <div class="progress-label col-sm-3 col-lg-2">Java</div>
                       <div class="col-sm-8 col-lg-5">
                           <div class="progress justify-content-end" style="width: 100%; float: right;">
@@ -220,6 +228,7 @@
                           </div>
                       </div>
                   </li>
+
                   <li class="list-item progress-holder row align-items-center" style="padding:5px">
                       <div class="progress-label col-sm-3 col-lg-2">Fusion 360</div>
                       <div class="col-sm-8 col-lg-5">
@@ -232,7 +241,15 @@
                       <div class="progress-label col-sm-3 col-lg-2">Blender</div>
                       <div class="col-sm-8 col-lg-5">
                           <div class="progress justify-content-end" style="width: 100%; float: right;">
-                              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div>
+                      </div>
+                  </li>
+				  <li class="list-item progress-holder row align-items-center" style="padding:5px">
+                      <div class="progress-label col-sm-3 col-lg-2">3D Printing</div>
+                      <div class="col-sm-8 col-lg-5">
+                          <div class="progress justify-content-end" style="width: 100%; float: right;">
+                              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
                       </div>
                   </li>
@@ -264,10 +281,10 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>
-              My interests are primarily in Virtual Reality and Video Game Development, with hopes to create highly replayable experiences. I am also interested in Artificial Intelligence and Human-Computer Interaction, and how they can be applied in Virtual Reality and video gamees. Games I tend to gravitate towards are PVP and multiplayer games, but VR has caused my interest in simulator-style games to increase.
+              My interests are primarily in Virtual Reality and Video Game Development, with hopes to create highly replayable experiences. I am also interested in Artificial Intelligence, and how it can be applied in video games. Games I tend to gravitate towards are PVP and multiplayer games, but VR has caused my interest in simulator-style games to increase.
           </p>
             <p>
-                Beyond software development, I enjoy being active through sports, such as Basketball and Boxing. I'm also a guitarist who enjoys taking a crack at learning any new Polyphia song. Finally, I'm a hobbyist maker and tinkerer who likes to design and build things.
+                Beyond software development, I enjoy being active through sports, such as Basketball and Boxing. I'm also a guitarist who enjoys taking a crack at learning any new Polyphia song. Finally, I'm a hobbyist maker and tinkerer who likes to design functional solutions to any minor problems that come up.
             </p>
         </div>
       </section>
@@ -306,13 +323,6 @@
                       An ongoing personal project, this is a software-based audio soundboard. This is a fun project to help me learn C++, this project incorporates the portaudio and libsndfile libraries to create a program that records and plays back audio samples in real-time.
                   </p>
               </li>
-              <li style="padding-bottom: 40px">
-                  <h3>3D Printed Quest 2 "Developers'" Headstrap</h3>
-                  <a href="https://www.thingiverse.com/thing:5407375" style="font-size:12px;">Thingiverse Link</a>
-                  <p>
-                      A maker project inspired by the inconvenience of having to take of my VR headset entirely, just to change 1 line of code.
-                  </p>
-              </li>
           </ul>
         </div>
       </section>
@@ -348,12 +358,6 @@
                                 WIP: Analog kick and hi-hat pedal interactions, allowing control over their dynamics
                             </li>
                         </ul>
-
-                        <div style="text-align:center; padding-top: 20px">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/RPWr4kSICfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-
-                        <p style="padding-top: 20px">At the moment, the drum samples used are taken from the <a href="https://www.powerdrumkit.com">MTPowerDrumKit</a> VST plugin.</pstyle="text-align:center;>
 
                         <h3 style="padding-top: 40px">Future Additions:</h3>
                         <ul class="fa-ul mb-0">
