--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p class="mb-5">A graduate with a First Honor MEng in Computer Science, looking to further develop skills in Game Development. A self-driven, motivated individual with strong C# proficiency looking to contribute to a team of developers and take on new challenges.</p>
                 <ul class="list-inline list-social-icons mb-0">
                     <li class="list-inline-item">
-                        <a href="https://www.linkedin.com/in/andre-hui-a02011241/">
+                        <a href="https://www.linkedin.com/in/andre-tm-hui/">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -350,6 +350,13 @@
                         <a href="https://github.com/andre-tm-hui/Durhack2018" style="font-size:12px;">Github Link</a>
                         <p>
                             A hackathon group project made in Unity, where audio is played, and in-game elements react to the audio dynamically.
+                        </p>
+                    </li>
+                    <li style="padding-bottom: 40px">
+                        <h3>3D Printed Quest 2 "Developers'" Headstrap</h3>
+                        <a href="https://www.thingiverse.com/thing:5407375" style="font-size:12px;">Thingiverse Link</a>
+                        <p>
+                            A maker project inspired by the inconvenience of having to take of my VR headset entirely, just to change 1 line of code.
                         </p>
                     </li>
                 </ul>
