fixed internship dates

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">June 2017 - July 2017</span>
+                        <span class="text-primary">July 2017 - August 2017</span>
                     </div>
                 </div>
             </div>
@@ -375,7 +375,7 @@
                         </p>
                         <ul class="fa-ul mb-0">
                             <li style="padding:3px">
-                                Assortment of kit parts: Snare, Kick, Hi-Hat, 2 Crashes, 3 Toms and a Ride Cymbal
+                                Assortment of kit parts: Snare, Kick, Hi-Hat, 2 Crashes, 3 Toms and a Ride Cymbal, all modelled in Blender
                             </li>
                             <li style="padding:3px">
                                 Specific interactions including Rimshots on the snare, an alternate ride tone based on hit position and the ability to choke cymbals
