content update, removed personal contact details

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Andre Hui - Online Portfolio</title>
+    <title>Andre Hui - Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -70,10 +70,11 @@
                     <span class="text-primary">Hui</span>
                 </h1>
                 <div class="subheading mb-5">
-                    4800 Westlawn Drive · Burnaby, BC V5C3R3 · (+1) 778 887 2840 ·
                     <a href="mailto:andre.tm.hui@gmail.com">andre.tm.hui@gmail.com</a>
                 </div>
-                <p class="mb-5">A graduate with a First Honor MEng in Computer Science, looking to further develop skills in Game Development. A self-driven, motivated individual with strong C# proficiency looking to contribute to a team of developers and take on new challenges.</p>
+                <p class="mb-5">
+                    A MEng in Computer Science, specializing in Unity development, with an appreciation of all aspects of game design, from game music to UI design. Looking to develop fun video games!
+                </p>
                 <ul class="list-inline list-social-icons mb-0">
                     <li class="list-inline-item">
                         <a href="https://www.linkedin.com/in/andre-tm-hui/">
@@ -121,7 +122,7 @@
                         <div class="subheading mb-3">Li & Fung, Hong Kong</div>
                         <ul class="fa-ul mb-0">
                             <li>
-                                Organizing and updating a large database of products supplied through the company.
+                                Organizing and updating a large database of products supplied through the company to be more readable.
                             </li>
                             <li>
                                 Creating a brochure to market the company to potential clients.
@@ -130,6 +131,24 @@
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">July 2017 - August 2017</span>
+                    </div>
+                    <div class="resume-content mr-auto">
+                        <h3 class="mb-0">Freelance Product Prototyper</h3>
+                        <div class="subheading mb-3">Cassie Donnie, Hong Kong</div>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                Communicated with a product designer to ensure designer intentions are properly kept.
+                            </li>
+                            <li>
+                                Turned CAD drawings into 3D CAD objects.
+                            </li>
+                            <li>
+                                Produced 3D printed prototypes with 1 week turnaround times.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">March 2022 - July 2022</span>
                     </div>
                 </div>
             </div>
@@ -238,6 +257,15 @@
                     </li>
 
                     <li class="list-item progress-holder row align-items-center" style="padding:5px">
+                        <div class="progress-label col-sm-3 col-lg-2">Ableton Live 11</div>
+                        <div class="col-sm-8 col-lg-5">
+                            <div class="progress justify-content-end" style="width: 100%; float: right;">
+                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="list-item progress-holder row align-items-center" style="padding:5px">
                         <div class="progress-label col-sm-3 col-lg-2">Fusion 360</div>
                         <div class="col-sm-8 col-lg-5">
                             <div class="progress justify-content-end" style="width: 100%; float: right;">
@@ -275,10 +303,6 @@
                     </li>
                     <li>
                         <i class="fa-li fa fa-check"></i>
-                        Time Management
-                    </li>
-                    <li>
-                        <i class="fa-li fa fa-check"></i>
                         Communication
                     </li>
                 </ul>
@@ -289,10 +313,10 @@
             <div class="my-auto">
                 <h2 class="mb-5">Interests</h2>
                 <p>
-                    My interests are primarily in Virtual Reality and Video Game Development, with hopes to create highly replayable experiences. I am also interested in Artificial Intelligence, and how it can be applied in video games. Games I tend to gravitate towards are PVP and multiplayer games, but VR has caused my interest in simulator-style games to increase.
+                    My interests are primarily in Virtual Reality and Video Games, and I particularly enjoy simple, highly replayable games. I am also interested in Artificial Intelligence, and how it can be applied in video games. Games I tend to gravitate towards are PVP and multiplayer games, but VR has caused my interest in simulator-style games to increase.
                 </p>
                 <p>
-                    Beyond software development, I enjoy being active through sports, such as Basketball and Boxing. I'm also a guitarist who enjoys taking a crack at learning any new Polyphia song. Finally, I'm a hobbyist maker and tinkerer who likes to design functional solutions to any minor problems that come up.
+                    Beyond software development, I enjoy being active through sports, such as Basketball and Boxing. I'm also a guitarist who enjoys taking a crack at learning any new Polyphia song. Finally, I'm a hobbyist maker and tinkerer who likes to design and print useful bits and bobs.
                 </p>
             </div>
         </section>
@@ -301,6 +325,13 @@
             <div class="my-auto">
                 <h2 class="mb-5">Projects</h2>
                 <ul class="fa-ul mb-0">
+                    <li style="padding-bottom: 40px">
+                        <div><h3>Sideout - GeoJam 2022</h3></div>
+                        <p>
+                            Part of a 72 hour game jam, this is a top-down geometry-themed survival shooter game, loosely inspired by games like Vampire Survivors and snake.io.
+                        </p>
+                        <a href="https://onglez.itch.io/sideout">Play it here!</a>
+                    </li>
                     <li style="padding-bottom: 40px">
                         <div><h3>VR Drum Simulator</h3></div>
                         <p>
