--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <div class="my-auto">
                 <h2 class="mb-5">Interests</h2>
                 <p>
-                    In Computer Science, I am most interested in Human-Computer Interaction, and ways to integrate different fields into the pipeline, such as Machine Learning and Computer Vision. This stems from my intrigue in Virtual Reality and my desire for highly immersive interaction in virtual spaces. Similarly, my hobby for Game Development also started largely with Virtual Reality, though now I enjoy 2D game development equally.
+                    In Computer Science, I am most interested in Human-Computer Interaction, and ways to integrate different fields into the pipeline, such as Machine Learning and Computer Vision. This stems from my intrigue for Virtual Reality and my desire for highly immersive interaction in virtual spaces. Similarly, my hobby for Game Development also started largely with Virtual Reality, though now I enjoy 2D game development equally.
                 </p>
                 <p>
                     Beyond software development, I enjoy being active through sports, such as Basketball and Boxing. I'm also a guitarist who enjoys taking a crack at learning any new Polyphia song. Finally, I'm a hobbyist maker and tinkerer who likes to design and print useful bits and bobs.
@@ -276,15 +276,32 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
             <div class="my-auto row">
-                <h2 class="mb-5">Projects</h2>
-                <div class="col col-sm-12 col-md-6 gy-2">
+                <h2>Projects</h2>
+                <div class="col col-sm-12 col-md-6">
+                    <div class="portfolio-item">
+                        <div class="row" style="height: 85%; vertical-align:top;">
+                            <h3>Holy Grail</h3>
+                            <div class="col-xs-12 text-center">
+                                <img src="img/holygrailpv.gif" style="width:90%; max-width: 400px;" />
+                            </div>
+                            <p style="font-size: 14px">
+                                A rage game, inspired by Getting Over It, Jump King and Pogostuck, and themed around sneaker culture. This is a personal game project in early development, made in Unity.
+                            </p>
+                        </div>
+
+                        <div class="row" style="padding:18px;">
+                            <a type="button" class="btn btn-secondary" style="font-size: 14px; padding: 4px; background-color: #454545; color: #AAAAAA;" href="https://onglez.itch.io/sideout">See More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-sm-12 col-md-6">
                     <div class="portfolio-item">
                         <div class="row" style="height: 85%; vertical-align:top;">
                             <h3>Sideout - GeoJam 2022</h3>
                             <div class="col-xs-12 text-center">
-                                <img src="img/sideoutpv.gif" style="width:90%;" />
+                                <img src="img/sideoutpv.gif" style="width:90%; max-width: 400px;" />
                             </div>
-                            <p>
+                            <p style="font-size: 14px">
                                 Part of a 72 hour game jam, this is a top-down geometry-themed survival shooter game, loosely inspired by games like Vampire Survivors and snake.io. This game achieved 23rd place, and was voted 4th place for gameplay. Developed in Unity.
                             </p>
                         </div>
@@ -294,14 +311,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-sm-12 col-md-6 gy-2">
+                <div class="col col-sm-12 col-md-6 gy-5">
                     <div class="portfolio-item">
                         <div class="row" style="height: 85%; vertical-align:top;">
                             <h3>VR Drum Simulator</h3>
                             <div class="col-xs-12 text-center">
-                                <iframe style="width:90%; aspect-ratio:16/9;" src="https://www.youtube.com/embed/RPWr4kSICfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
+                                <iframe style="width: 90%; max-width: 400px; aspect-ratio: 16/9;" src="https://www.youtube.com/embed/RPWr4kSICfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
                             </div>
-                            <p>
+                            <p style="font-size: 14px">
                                 An ongoing personal project, this is a Virtual Reality drums simulator, which allows you to arrange your own drum kit and play, with the goal of making a responsive experience, keeping it as true-to-life as possible. Developed in Unity.
                             </p>
                         </div>
@@ -312,14 +329,14 @@
                     </div>
                 </div>
 
-                <div class="col col-sm-12 col-md-6 gy-2">
+                <div class="col col-sm-12 col-md-6 gy-5">
                     <div class="portfolio-item">
                         <div class="row" style="height: 85%; vertical-align:top;">
                             <h3>A Deepdive into Tetris AI</h3>
                             <div class="col-xs-12 text-center">
-                                <img src="img/tetrispv.gif" style="width:55%;" />
+                                <img src="img/tetrispv.gif" style="width: 55%; max-width: 400px;" />
                             </div>
-                            <p>
+                            <p style="font-size: 14px">
                                 A 4th Year Masters project, agents based on several different algorithms are tested on their ability to play NES Tetris. Programmed in Python, using Pytorch and nes-py.
                             </p>
                         </div>
@@ -331,14 +348,14 @@
                     </div>
                 </div>
 
-                <div class="col col-sm-12 col-md-6 gy-2">
+                <div class="col col-sm-12 col-md-6 gy-5">
                     <div class="portfolio-item">
                         <div class="row" style="height: 85%; vertical-align:top;">
                             <h5>Hand Gesture Estimation Using a Convolutional Neural Network and a Single RGB Camera</h5>
                             <div class="col-xs-12 text-center">
-                                <iframe style="width:90%; aspect-ratio:16/9;" src="https://www.youtube.com/embed/UWQnB8vu8Ao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe style="width: 90%; max-width: 400px; aspect-ratio: 16/9;" src="https://www.youtube.com/embed/UWQnB8vu8Ao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
-                            <p>
+                            <p style="font-size: 14px">
                                 A 3rd Year university project, gestures are detected using a single front-facing RGB camera, employing various Computer Vision techniques to detect a hand, and a CNN for gesture identification. Programmed in Python, using openCV and Pytorch.
                             </p>
                         </div>
@@ -350,14 +367,14 @@
                     </div>
                 </div>
 
-                <div class="col col-sm-12 col-md-6 gy-2">
+                <div class="col col-sm-12 col-md-6 gy-5">
                     <div class="portfolio-item">
                         <div class="row" style="height: 85%; vertical-align:top;">
                             <h3>Virtual Soundboard and Sampler</h3>
                             <div class="col-xs-12 text-center">
-                                Video to be added
+                                <iframe style="width: 90%; max-width: 400px; aspect-ratio: 16/9;" src="https://www.youtube.com/embed/OLpiWMZ6lKA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
-                            <p>
+                            <p style="font-size: 14px">
                                 An ongoing software project, this is a digital soundboard, sampler and voice-changer, intended to be a free alternative to tools such as the TC helicon GoXLR. Programmed in C++, using the portaudio and libsndfile libraries, and brought to life using the Qt framework.
                             </p>
                         </div>
@@ -368,28 +385,28 @@
                     </div>
                 </div>
 
-                <div class="col col-sm-12 col-md-6 gy-2">
+                <div class="col col-sm-12 col-md-6 gy-5">
                     <div class="portfolio-item">
                         <div class="row" style="height: 100%; vertical-align:top;">
                             <h3>River Tees Rediscovered - Virtual Tour</h3>
                             <div class="col-xs-12 text-center">
-                                <img src="img/rivertees.png" style="width:90%;" />
+                                <img src="img/rivertees.png" style="width: 90%; max-width: 400px;" />
                             </div>
-                            <p>
+                            <p style="font-size: 14px">
                                 A 2nd Year university group project, we design and implement a virtual tour for a set of trails provided by River Tees Rediscovered. An Agile development workflow was established, with weekly Scrums, and termly meetings with the customer. I was responsible for UI involving the viewing of trails, and worked with the team on integration between the front- and back-ends.
                             </p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col col-sm-12 col-md-6 gy-2">
+                <div class="col col-sm-12 col-md-6 gy-5">
                     <div class="portfolio-item">
                         <div class="row" style="height: 85%; vertical-align:top;">
                             <h3>3D Printed Quest 2 "Developers'" Headstrap</h3>
                             <div class="col-xs-12 text-center">
-                                <img src="img/queststrap.jpg" style="width:80%;" />
+                                <img src="img/queststrap.jpg" style="width: 80%; max-width: 400px;" />
                             </div>
-                            <p>
+                            <p style="font-size: 14px">
                                 A maker project designed to streamline the VR game-development process by removing the need for the user to completely take of their headset to make minute changes.
                             </p>
                         </div>
@@ -400,11 +417,11 @@
                     </div>
                 </div>
 
-                <div class="col col-sm-12 col-md-6 gy-2">
+                <div class="col col-sm-12 col-md-6 gy-5">
                     <div class="portfolio-item">
                         <div class="row" style="height: 85%; vertical-align:top;">
                             <h3>VR Synesthesia Experience - Durhack 2018</h3>
-                            <p>
+                            <p style="font-size: 14px">
                                 A hackathon group project made in Unity, where audio is played, and in-game elements react to the audio dynamically.
                             </p>
                         </div>
