fixed formatting inconsistency

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body id="page-top">
 
-    <nav class="navbar navbar-expand navbar-dark bg-primary fixed-top"">
+    <nav class="navbar navbar-expand navbar-dark bg-primary fixed-top">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none"></span>
       </a>
@@ -104,7 +104,7 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column border-primary">
             <div class="my-auto">
-                <h3 class="mb-3" style="font-family: 'NES'">About Me</h3>
+                <h3 class="mb-3 border-menu-primary" style="font-family: 'NES'">About Me</h3>
                 <p>
                     Hello! My name is Andre, and I'm a Computer Science graduate from Durham University. Since graduating in 2021, I've moved from Hong Kong to Canada with my family, and spent a year self-studying, learning more about game development, 3D modelling and C++, whilst helping my family settle down and renovate our home.
                 </p>
@@ -144,7 +144,7 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column border-primary" id="featuredproj">
             <div class="my-auto">
-                <h3 class="mb-5 border-menu-primary">Featured Projects</h3>
+                <h3 class="mb-3 border-menu-primary">Featured Projects</h3>
                 <div class="row featured-item" style="margin:1%;" id="virtualsound">
                     <div class="col-sm-12 col-md-8 featured-item-component">
                         <iframe style="width: 100%; max-width: 600px; aspect-ratio: 16/9;" src="https://www.youtube.com/embed/OLpiWMZ6lKA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
