--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
           </a>
           <ul class="navbar-nav list-inline">
               <li class="nav-item list-inline-item">
-                  <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                  <a class="nav-link js-scroll-trigger" style="font-size: 14px" href="#about">About</a>
               </li>
               <li class="nav-item list-inline-item">
-                  <a class="nav-link js-scroll-trigger" href="#featuredproj">Featured Projects</a>
+                  <a class="nav-link js-scroll-trigger" style="font-size: 14px" href="#featuredproj">Featured Projects</a>
               </li>
               <li class="nav-item list-inline-item">
-                  <a class="nav-link js-scroll-trigger" href="#projects">Other Work</a>
+                  <a class="nav-link js-scroll-trigger" style="font-size: 14px" href="#projects">Other Work</a>
               </li>
           </ul>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -56,7 +56,7 @@
               <div class="my-auto">
                   <h4 style="font-family: 'NES'; color: #BD5D38; ">Hi! My name is</h4>
 
-                  <h2 class="mb-2" id="name" style="font-family: 'NES'">---------</h2>
+                  <h2 class="mb-2 col-12 text-break" id="name" style="font-family: 'NES'; max-width: 100%;">---------</h2>
 
                   <p class="mb-3">
                       I'm an MEng in Computer Science, who enjoys creating cool software, games and tools. Currently open for Software Development work.
