--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
               <div class="my-auto">
                   <h3 class="mb-3 border-menu-primary col-sm-12 col-md-6" style="font-family: 'NES'; margin: auto;">About Me</h3>
                   <p>
-                      Hello! My name is Andre, and I'm a Computer Science graduate from Durham University. Since graduating in 2021, I've moved from Hong Kong to Canada with my family, and spent a year self-studying, learning more about game development, 3D modelling and C++, whilst helping my family settle down and renovate our home.
+                      Hello! My name is Andre, and I'm a Computer Science graduate from Durham University. Since graduating in 2021, I've moved from Hong Kong to Canada with my family, and spent a year self-studying, learning more about game development, 3D modelling and C++.
                   </p>
                   <p>
                       Throughout this time, I had the opportunity to tackle a variety of problems, ranging from physics oversights in the Unity Engine, human-computer interaction in XR applications and digital audio signal processing in C++, as well as less programming-centric challenges such as demolishing parts of a house and putting up drywall!
                   </p>
                   <p class="mb-5">
-                      At the moment, I'm commiting most of my time to developing a <a href="#virtualsound">Virtual Soundtool</a>. When I'm not working on programming and game projects, I often play basketball, noodle on the guitar or play video games. I also consider myself a tinkerer and a maker.
+                      At the moment, I'm commiting most of my time to developing a <a href="#virtualsound">ReVox</a>. When I'm not working on programming and game projects, I often play basketball, noodle on the guitar or play video games. I also consider myself a tinkerer and a maker.
                   </p>
 
                   <div class="border-secondary">
@@ -150,10 +150,10 @@
                   <h3 class="mb-3 border-menu-primary col-sm-12 col-md-6" style="margin: auto;">Featured Projects</h3>
                   <div class="row featured-item" style="margin:1%;" id="virtualsound">
                       <div class="col-sm-12 col-md-8 featured-item-component">
-                          <iframe style="width: 100%; max-width: 600px; aspect-ratio: 16/9;" src="https://www.youtube.com/embed/OLpiWMZ6lKA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
+                          <image style="width: 100%; max-width: 600px;" src="img/intro.gif"></image>
                       </div>
                       <div class="col-sm-12 col-md-4 featured-item-component" style="margin: auto;">
-                          <div class="row"><h5>Virtual Soundtool</h5></div>
+                          <div class="row"><h5>ReVox</h5></div>
                           <div class="row">
                               <p>
                                   An audio sampler, soundboard and voice changer, all in one program, for anyone who wants to spice up their voice chats or livestreams.
