--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <h2 class="mb-2 col-12 text-break" id="name" style="font-family: 'NES'; max-width: 100%;">---------</h2>
 
                   <p class="mb-3">
-                      I'm an MEng in Computer Science, who enjoys creating cool software, games and tools. Currently open for Software Development work.
+                      I'm an MEng in Computer Science, who enjoys creating cool software, games and tools. Currently open for Software Engineering or Game Development work.
                   </p>
 
                   <div class="border-3 col-sm-12 col-md-6" style="margin: auto;">
@@ -112,10 +112,10 @@
                       Hello! My name is Andre, and I'm a Computer Science graduate from Durham University. Since graduating in 2021, I've moved from Hong Kong to Canada with my family, and spent a year self-studying, learning more about game development, 3D modelling and C++.
                   </p>
                   <p>
-                      Throughout this time, I had the opportunity to tackle a variety of problems, ranging from physics oversights in the Unity Engine, human-computer interaction in XR applications and digital audio signal processing in C++, as well as less programming-centric challenges such as demolishing parts of a house and putting up drywall!
+					  During this time, I've had the chance to participate in my first game jam, develop a small open-source audio app, and contribute to the development of a mobile app for a non-profit. Through this, I've learnt the excitement of having my creations be played/used by strangers on the internet, as well as the stress of dealing with unhappy customers.
                   </p>
                   <p class="mb-5">
-                      At the moment, I'm commiting most of my time to developing a <a href="#virtualsound">ReVox</a>. When I'm not working on programming and game projects, I often play basketball, noodle on the guitar or play video games. I also consider myself a tinkerer and a maker.
+                      At the moment, I'm splitting my time between developing <a href="#virtualsound">ReVox</a> and developing for <a href="https://collaction.org">CollAction</a>. When I'm not working on programming and game projects, I often play basketball, noodle on the guitar, make things in CAD or play video games.
                   </p>
 
                   <div class="border-secondary">
@@ -124,6 +124,7 @@
                           <li class="list-inline-item skill-item mb-2">Python</li>
                           <li class="list-inline-item skill-item mb-2">C#</li>
                           <li class="list-inline-item skill-item mb-2">C++</li>
+						  <li class="list-inline-item skill-item mb-2">Flutter/Dart</li>
                           <li class="list-inline-item skill-item mb-2">HTML</li>
                           <li class="list-inline-item skill-item mb-2">CSS</li>
                           <li class="list-inline-item skill-item mb-2">Javascript</li>
